# medicineApp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_START_HERE.md  AI_REVIEW_CHECKLIST.md  APP_ACTIVE_DETAILED_PLAN.md  APP_ACTIVE_GENERAL_PLAN.md  APP_DETAIL_CLAUDE_SONNET_THINKING_SLICE_7B_DRUG_ENTRY_STABLE.md  APP_DETAIL_GEMINI_3_1_PRO_SLICE_7A_SCAN_AUTO.md  APP_EXECUTION_BOARD.md  CLEANUP_REPORT_2026_04_12.md  EXPERIMENTAL_SETUP.md  LICENSE  PIPELINE_STATUS.md  README.md  RESTRUCTURE_REVIEW_REQUEST.md  THESIS_UPDATE_REPORT.md  config.yaml  dev.sh  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.agent/: ARCHITECTURE.md  INSTALL.md  README.md
.gemini/: GEMINI.md
archive/: README.md
core/: README.md  config.py  matcher.py  pill_detector.py  pipeline.py  segmentation.py
data/: README.md  drug_db_vn.csv  pill_info_vn.csv  vaipe_drugs_kb.json
docs/: .gitkeep  COLAB_SETUP.md  MASTER_PLAN.md  OCR_METHOD_DECISION.md  PROJECT_RULES.md  README.md  SYSTEM_EVALUATION.md  UONG_THUOC_CAI_DAT_KHONG_DAY.md  UONG_THUOC_FULL_TEST_PLAN.md  UONG_THUOC_TEST_EXECUTION_PLAN.md  UONG_THUOC_UX_USER_TEST_CHECKLIST.md  YOLOV11_GUIDE.md  YOLO_GUIDE.md  agent_kit_medicineapp.md  agent_kit_rollout.md  master_plan.md  phase_a_app_scan_alignment_completed.md  phase_a_debug_runbook.md  phase_b_dose_verification_completed.md  phase_b_mvp_lite_plan.md  phobert_ner_plan.md  project_status.md  resume_on_new_account.md
inference/: __init__.py  predict.py
mobile/: README.md  Vi_QuanLyDaoTao_sdlop_QLPM.mdj  l10n.yaml  pubspec.yaml
models/: README.md  (+2 more)
(+361 files in other folders)
