[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicine-app"
version = "0.1.0"
description = "Ứng dụng nhắc nhở uống thuốc với YOLO Segmentation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "hongphuoc6104"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/hongphuoc6104/medicineApp"
"Repository" = "https://github.com/hongphuoc6104/medicineApp.git"

[project.scripts]
medicine-inference = "scripts.run_inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "inference*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
